typescript/checker/tests/conformance/parser/ecmascript5/Protected/Protected7.ts.stderr
error: Unexpected token Some(Word(m))
 --> $DIR/tests/conformance/parser/ecmascript5/Protected/Protected7.ts:2:21
  |
2 |   protected private m() { }
  |                     ^

